# poetry_package_with_subdir_package

./: pyproject.toml
poetry_subdir_package/: pyproject.toml
