[tool.poetry]
name = "poetry_package_with_subdir_package"
version = "0.1.0"
description = ""
authors = ["ota42y <ota42y@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
poetry_subdir_package = {path = './poetry_subdir_package'}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
